--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2481,6 +2481,9 @@ p > video {
 	margin-bottom: 0;
 }
 
+.site-footer .footer-block {
+  margin-bottom: 10px;
+}
 
 /**
  * 16.0 Media Queries
@@ -2634,6 +2637,21 @@ p > video {
 		margin: 0 3.6923%;
 		padding: 3.84615% 3.6923%;
 	}
+
+  .site-footer .site-info a {
+    float: left;
+    clear: left;
+    text-decoration: underline;
+  }
+
+  .site-footer .footer-block {
+    width: 33.3%;
+    float: left;
+  }
+
+  .site-footer .copyright {
+    padding-right: 50px;
+  }
 
 	.post-navigation {
 		border-top: 0;
